Compiler/antlr/test_cases/semantic_errors/err7_cond.tiger
main let
   var a : float := 0;
   var b : float := 7;
in begin
   if (a + b) then
       a := b;
   endif;
end
